--- a/src/www/time.html
+++ b/src/www/time.html
@@ -131,7 +131,11 @@
           </div>
           <div class="flex justify-center mb-2 mt-1">
             <button @click.prevent="updateTime()"
-              class="bg-green-600 text-white font-semibold py-2 px-4 rounded focus:outline-none hover:bg-green-700">Update Time</button>
+              class="bg-green-600 inline-flex text-white font-semibold py-2 px-4 rounded focus:outline-none hover:bg-green-700">
+              <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" class="w-6 h-6 mr-2">
+                <path fill-rule="evenodd" d="M12 2.25c-5.385 0-9.75 4.365-9.75 9.75s4.365 9.75 9.75 9.75 9.75-4.365 9.75-9.75S17.385 2.25 12 2.25ZM12.75 6a.75.75 0 0 0-1.5 0v6c0 .414.336.75.75.75h4.5a.75.75 0 0 0 0-1.5h-3.75V6Z" clip-rule="evenodd" />
+              </svg>              
+              <span>Update Time</span></button>
           </div>
 
           <div class="mb-4">
