--- a/src/www/time.html
+++ b/src/www/time.html
@@ -183,6 +183,7 @@
               <option value="single_color">Single Colour</option>
               <option value="rainbow">Rainbow</option>
               <option value="color_per_word">Word Colours</option>
+              <option value="random">Random</option>
             </select>
           </div>
           <!-- single color -->
@@ -223,7 +224,25 @@
         </div>
       </div>
 
+      <div class="rounded-lg bg-gray-50 shadow-sm ring-1 ring-gray-200 text-gray-500 p-4 mb-2">
+        <div class="flex items-center justify-between space-x-4 border-b border-gray-200 pb-2">
+          <div class="flex items-center space-x-2">
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" class="w-6 h-6">
+              <path d="M14 6H6v8h8V6Z" />
+              <path fill-rule="evenodd" d="M9.25 3V1.75a.75.75 0 0 1 1.5 0V3h1.5V1.75a.75.75 0 0 1 1.5 0V3h.5A2.75 2.75 0 0 1 17 5.75v.5h1.25a.75.75 0 0 1 0 1.5H17v1.5h1.25a.75.75 0 0 1 0 1.5H17v1.5h1.25a.75.75 0 0 1 0 1.5H17v.5A2.75 2.75 0 0 1 14.25 17h-.5v1.25a.75.75 0 0 1-1.5 0V17h-1.5v1.25a.75.75 0 0 1-1.5 0V17h-1.5v1.25a.75.75 0 0 1-1.5 0V17h-.5A2.75 2.75 0 0 1 3 14.25v-.5H1.75a.75.75 0 0 1 0-1.5H3v-1.5H1.75a.75.75 0 0 1 0-1.5H3v-1.5H1.75a.75.75 0 0 1 0-1.5H3v-.5A2.75 2.75 0 0 1 5.75 3h.5V1.75a.75.75 0 0 1 1.5 0V3h1.5ZM4.5 5.75c0-.69.56-1.25 1.25-1.25h8.5c.69 0 1.25.56 1.25 1.25v8.5c0 .69-.56 1.25-1.25 1.25h-8.5c-.69 0-1.25-.56-1.25-1.25v-8.5Z" clip-rule="evenodd" />
+            </svg>
+            <div>System</div>
+          </div>
+        </div>
 
+        <div class="flex items-center justify-between space-x-4 mt-2">
+          <div>CPU Temp:</div>
+          <div x-text="settings.cpu_temp==0 ? 'n/a' : settings.cpu_temp.toFixed(2)+'°C'">n/a</div>
+        </div>
+
+      </div>
+
+      <!-- wifi details -->
       <div class="rounded-lg bg-gray-50 shadow-sm ring-1 ring-gray-200 text-gray-500 p-4">
         <div class="flex items-center justify-between space-x-4 border-b border-gray-200 pb-2">
           <div class="flex items-center space-x-2">
@@ -290,7 +309,7 @@
 
     function clock(e) {
       return {
-        settings: { 'brightness': 5, 'display_mode': 'single_color', 'rainbow': [255, 0, 0], 'wifi_connected': false },
+        settings: { 'brightness': 5, 'display_mode': 'single_color', 'rainbow': [255, 0, 0], 'wifi_connected': false, 'cpu_temp':0 },
         timeDisplay: [0, 0, 0, 0, 0, 0],
         //path: 'http://192.168.1.161', // use this for development
         path: '',
