--- a/src/www/time.html
+++ b/src/www/time.html
@@ -103,7 +103,7 @@
           </div>
           <div class="mb-4">
             <label for="ssid" class="block text-sm font-medium leading-6 text-gray-900">SSID:</label>
-            <input type="text" id="ssid" x-model="settings.wifi_ssid"
+            <input type="text" id="ssid" x-model="settings.wifi_ssid" autocapitalize="none"
               class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-1.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500">
           </div>
           <div class="mb-4">
